{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 190,
  "lineage": "369ecedd-1747-e0ba-7264-55cbeac393ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-first-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e29e8480138d659c",
            "association_id": "eipassoc-0eecbd72c9fb2d56a",
            "domain": "vpc",
            "id": "eipalloc-0e29e8480138d659c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bdd316024db1a8cf",
            "private_dns": "ip-10-0-3-209.ec2.internal",
            "private_ip": "10.0.3.209",
            "public_dns": "ec2-35-169-138-207.compute-1.amazonaws.com",
            "public_ip": "35.169.138.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-first-public-subnet"
            },
            "tags_all": {
              "Name": "eip-first-public-subnet"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-second-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b3de291289f8b64",
            "association_id": "eipassoc-0e433ad6f8026f90f",
            "domain": "vpc",
            "id": "eipalloc-07b3de291289f8b64",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0553b4f834d3d0390",
            "private_dns": "ip-10-0-4-135.ec2.internal",
            "private_ip": "10.0.4.135",
            "public_dns": "ec2-18-213-244-30.compute-1.amazonaws.com",
            "public_ip": "18.213.244.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-second-public-subnet"
            },
            "tags_all": {
              "Name": "eip-second-public-subnet"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322225864754:internet-gateway/igw-01de7bf79ac83ac94",
            "id": "igw-01de7bf79ac83ac94",
            "owner_id": "322225864754",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0fb281d132ab1ac71"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-first-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e29e8480138d659c",
            "connectivity_type": "public",
            "id": "nat-0477df4fe9cb6e8b5",
            "network_interface_id": "eni-0bdd316024db1a8cf",
            "private_ip": "10.0.3.209",
            "public_ip": "35.169.138.207",
            "subnet_id": "subnet-055f49288a762af86",
            "tags": {
              "Name": "nat-first-public-subnet"
            },
            "tags_all": {
              "Name": "nat-first-public-subnet"
            }
          },
          "dependencies": [
            "aws_eip.eip-first-public-subnet",
            "aws_internet_gateway.igw",
            "aws_subnet.first-public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-second-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b3de291289f8b64",
            "connectivity_type": "public",
            "id": "nat-0b4efbca713c36df7",
            "network_interface_id": "eni-0553b4f834d3d0390",
            "private_ip": "10.0.4.135",
            "public_ip": "18.213.244.30",
            "subnet_id": "subnet-015416ca3acf8feca",
            "tags": {
              "Name": "nat-second-public-subnet"
            },
            "tags_all": {
              "Name": "nat-second-public-subnet"
            }
          },
          "dependencies": [
            "aws_eip.eip-second-public-subnet",
            "aws_internet_gateway.igw",
            "aws_subnet.second-public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-first-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322225864754:route-table/rtb-08bda6099ca9154ef",
            "id": "rtb-08bda6099ca9154ef",
            "owner_id": "322225864754",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0477df4fe9cb6e8b5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-first-private-subnet"
            },
            "tags_all": {
              "Name": "route-table-first-private-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb281d132ab1ac71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-first-public-subnet",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-first-public-subnet",
            "aws_subnet.first-public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322225864754:route-table/rtb-0ab8f6fc8c9199e32",
            "id": "rtb-0ab8f6fc8c9199e32",
            "owner_id": "322225864754",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01de7bf79ac83ac94",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-public-subnets"
            },
            "tags_all": {
              "Name": "route-table-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb281d132ab1ac71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-second-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322225864754:route-table/rtb-0972f64e08c7370c7",
            "id": "rtb-0972f64e08c7370c7",
            "owner_id": "322225864754",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b4efbca713c36df7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-second-private-subnet"
            },
            "tags_all": {
              "Name": "route-table-second-private-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb281d132ab1ac71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-second-public-subnet",
            "aws_subnet.second-public-subnet",
            "aws_vpc.vpc",
            "aws_eip.eip-second-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-association-first-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fcf5e20fe2926ca",
            "route_table_id": "rtb-08bda6099ca9154ef",
            "subnet_id": "subnet-072556b456a5ce881"
          },
          "dependencies": [
            "aws_route_table.route-table-first-private-subnet",
            "aws_subnet.first-private-subnet",
            "aws_subnet.first-public-subnet",
            "aws_vpc.vpc",
            "aws_eip.eip-first-public-subnet",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-first-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-association-first-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094fe876c5fedb531",
            "route_table_id": "rtb-0ab8f6fc8c9199e32",
            "subnet_id": "subnet-055f49288a762af86"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route-table-public-subnets",
            "aws_subnet.first-public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-association-second-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a77e3b8f69f95396",
            "route_table_id": "rtb-0972f64e08c7370c7",
            "subnet_id": "subnet-0077e74c2f3f64aff"
          },
          "dependencies": [
            "aws_eip.eip-second-public-subnet",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-second-public-subnet",
            "aws_route_table.route-table-second-private-subnet",
            "aws_subnet.second-private-subnet",
            "aws_subnet.second-public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-association-second-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0a30dc331bf6409",
            "route_table_id": "rtb-0ab8f6fc8c9199e32",
            "subnet_id": "subnet-015416ca3acf8feca"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_internet_gateway.igw",
            "aws_route_table.route-table-public-subnets",
            "aws_subnet.second-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322225864754:subnet/subnet-072556b456a5ce881",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072556b456a5ce881",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "322225864754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fb281d132ab1ac71"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322225864754:subnet/subnet-055f49288a762af86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055f49288a762af86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "322225864754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fb281d132ab1ac71"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322225864754:subnet/subnet-0077e74c2f3f64aff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0077e74c2f3f64aff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "322225864754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fb281d132ab1ac71"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322225864754:subnet/subnet-015416ca3acf8feca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015416ca3acf8feca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "322225864754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fb281d132ab1ac71"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:322225864754:vpc/vpc-0fb281d132ab1ac71",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0021ffca003cae4d8",
            "default_route_table_id": "rtb-08ff82efb5ba13773",
            "default_security_group_id": "sg-0f1e622210854aa73",
            "dhcp_options_id": "dopt-57d2cc35",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fb281d132ab1ac71",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ff82efb5ba13773",
            "owner_id": "322225864754",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "sampleappservice",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "default/sampleappservice",
            "metadata": [
              {
                "generation": 0,
                "name": "sampleappservice",
                "namespace": "default"
              }
            ],
            "spec": [
              {
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "sampleapplication"
                },
                "session_affinity": "ClientIP",
                "type": "LoadBalancer"
              }
            ]
          },
          "dependencies": [
            "aws_eks_cluster.K8-cluster"
          ]
        }
      ]
    }
  ]
}